# dls

./: README.md  eslint.config.mjs  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: main.yml
backend/: atualizarPlanilha.js  package.json  server.js
backups/antes_renomeacao_codigos_2026-07-17/: 01_schema_public.sql  03_roles.sql  SHA256.txt
blog/: package-lock.json  package.json
src/: processarPlanilha.js  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/context/: AuthContext.tsx  ProfileContext.tsx
src/entities/: Custo.json  Produto.json
src/hooks/: global-search-items.ts  use-toast.ts  useAnuncioDetalhes.ts  useAuth.ts  useAuthRedirect.ts  useInitialRedirect.ts  useLocalStorage.ts  useLogin.ts  useLogout.ts  usePrecificacao.ts  useProfile.ts
src/lib/: createNotification.ts  postgres.ts  queryParams.ts
src/local/: i18n.ts
src/services/: authService.ts  supabaseChatService.ts
src/types/: supabase.ts  supabase.types.ts
src/utils/: searchcosts.ts  sound.ts  supabase-helpers.ts  (+1 more)
supabase/: config.toml
uploads/: AUTOMACAO - MODELO -26-03-2026.xlsx  AUTOMACAO - MODELO -27-02-2026.xlsx  AUTOMACAO - MODELO -30-01-2026.xlsx  AUTOMACAO-1761588493694.xlsx  AUTOMACAO-MODELO-29-01-2026.xlsx  AUTOMACAO-MODELO-30-01-2026.xlsx  AUTOMAÇÃO - MODELO - 21-01-2026.xlsx  AUTOMAÇÃO - MODELO - 24-10-2025.xlsx  AUTOMAÇÃO - MODELO - 27-10-2025.xlsx
(+281 files in other folders)
