[package]
name = "dls-ecommerce"
version = "0.1.0"
description = "Aplicativo Desktop DLS Ecommerce"
authors = ["DLS Ecommerce"]
license = "MIT"
repository = "https://github.com/dls-ecommerce/desktop"
edition = "2021"
rust-version = "1.77.2"
default-run = "dls-ecommerce"

# 🔗 Documentação oficial do Cargo:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dls_ecommerce_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }

# ✅ Plugin de log do Tauri
tauri-plugin-log = "2.7.0"
