[package]
name = "dls-ecommerce"
version = "0.1.0"
description = "Aplicativo Desktop DLS Ecommerce"
authors = ["DLS Ecommerce"]
license = "MIT"
repository = "https://github.com/dls-ecommerce/dls"
edition = "2021"
rust-version = "1.77.2"
default-run = "dls-ecommerce"

[lib]
name = "dls_ecommerce_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["default"] }

# 🔹 Plugins do Tauri
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
